efk-on-rke2-ha-azure/files/elastic-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  namespace: elastic-system
spec:
  ingressClassName: nginx
  rules:
  - host: "${elastic_fqdn}"
    https:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: susedemo-es-http
            port:
              number: 9200
